--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@ body.dark-mode ::-webkit-scrollbar-thumb:hover {
     width: auto;
     max-width: 120px; /* Adjust for mobile */
     font-size: 0.8em;
+    padding: 5px;
   }
 
   .header-menus label,
