--- a/index.html
+++ b/index.html
@@ -793,6 +793,10 @@ body.dark-mode .related-binyan-menu li:hover {
     color: var(--secondary-text-color);
   }
 }
+#dark-mode-toggle {
+  white-space: nowrap; /* Keeps the text on a single line */
+  min-width: 80px; /* Ensures the button is wide enough for "Dark Mode" */
+}
 
 /* Custom Fonts for Hebrew */
 @font-face {
