--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 160px; 
-  max-width: 200px; 
+  min-width: 160px; /* Reduced from 180px for better fit */
+  max-width: 50%; /* Flexible width based on container */
 }
 
 .verb-select-wrapper {
@@ -205,7 +205,7 @@ h1 {
    #binyan-select,
 #verb-select {
   width: 100%;
-  max-width: 200px; /* Fixed max-width to constrain size */
+  max-width: 250px;
   padding: 8px;
   font-size: 1em;
   border: 1px solid var(--input-border-color);
@@ -218,9 +218,6 @@ h1 {
   transition: all 0.3s ease;
   text-align: center;
   direction: rtl;
-  white-space: nowrap; /* Prevent text wrapping */
-  overflow: hidden; /* Hide excess text */
-  text-overflow: ellipsis; /* Abbreviate with ellipsis */
 }
 
 #binyan-select:focus,
@@ -269,12 +266,6 @@ h1 {
 #verb-search::placeholder {
   color: var(--secondary-text-color);
   opacity: 0.7;
-}
-#binyan-select option,
-#verb-select option {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 /* ==========================================================================
@@ -376,14 +367,13 @@ body.dark-mode #related-binyan-button:hover {
   border-color: var(--primary-color);
   box-shadow: 0 0 5px rgba(54, 73, 145, 0.5);
 }
-
 .related-binyan-menu {
   display: none;
   position: absolute;
   top: 100%;
-  right: 100%; /* Extend to the left */
+  right: 100%; /* Extend to the left from the button's right edge */
+  left: auto; /* Override any previous left setting */
   min-width: 200px;
-  max-width: 200px; /* Constrain width */
   background-color: var(--input-bg);
   border: 1px solid var(--border-color);
   border-radius: 4px;
@@ -392,9 +382,6 @@ body.dark-mode #related-binyan-button:hover {
   padding: 5px 0;
   z-index: 10;
   direction: rtl;
-  white-space: nowrap; /* Prevent wrapping */
-  overflow: hidden; /* Hide excess */
-  text-overflow: ellipsis; /* Abbreviate */
 }
 
 .related-binyan-menu li {
@@ -719,14 +706,19 @@ body.dark-mode ::-webkit-scrollbar-thumb:hover {
 
   .binyan-select-container,
   .verb-select-container {
-    flex: 0 0 160px; 
+    flex: 0 0 160px; /* Fixed width to ensure horizontal layout */
+    max-width: 160px;
+  }
+  .binyan-select-container,
+  .verb-select-container {
+    flex: 0 0 160px; /* Fixed width to ensure horizontal layout */
     max-width: 160px;
   }
 
   #binyan-select,
   #verb-select {
     width: 180px; /* Fixed width */
-    max-width: 160px;
+    max-width: 180px;
     padding: 5px;
     font-size: 0.8em;
     white-space: nowrap; /* Prevent wrapping */
