--- a/index.html
+++ b/index.html
@@ -659,6 +659,8 @@ body.dark-mode ::-webkit-scrollbar-thumb:hover {
     margin: 5px 0;
     min-width: 60px;
     max-width: 100px;
+    white-space: nowrap;
+    
   }
 
   #verb-search {
