--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   background-color: var(--container-bg);
   border: 1px solid var(--border-color);
   border-radius: 8px;
@@ -640,6 +640,9 @@ body.dark-mode ::-webkit-scrollbar-thumb:hover {
 
   h1 {
     font-size: 1.2em;
+  }
+  .container {
+  padding: 0px;
   }
 
   .conjugation-link {
