--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ rel="stylesheet"
   }
 
   #font-selector {
-    font-size: 0.9em;
+    font-size: 0.8em;
     padding: 5px 8px;
     min-width: 90px;
   }
@@ -293,6 +293,7 @@ rel="stylesheet"
   }
 
   #dark-mode-toggle {
+    font-size: .8em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -667,7 +668,7 @@ rel="stylesheet"
 <option value="Varela Round">Varela Round</option>
 <option value="Noto Serif">Noto Serif</option>
 <option value="Hadasim CLM">Hadasim CLM</option>
-<option value="Gveret Levin AlefAlefAlef">Gveret Levin AlefAlefAlef</option>
+<option value="Gveret Levin AlefAlefAlef">G.Levin AlefAlefAlef</option>
 <option value="Frank Ruehl CLM">Frank Ruehl CLM</option>
 <option value="Dorian CLM">Dorian CLM</option>
 <option value="Ktav Yad CLM">Ktav Yad CLM</option>
