--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ font-display: swap;
 <!-- Wrapper for the utility switcher and utility panel -->
 <div class="utilities-container">
 <button id="toggle-utilities" aria-expanded="true">▲</button>
-<div id="utility-panel" class="conjugation-link">
+<div id="utility-panel" class="conjugation-link collapsed">
 <label for="highlight-toggle">Highlight Roots</label>
 <input type="checkbox" id="highlight-toggle" checked />
 <button id="dark-mode-toggle">Dark Mode</button>
